# mynab

./: LICENSE  Makefile  README.md  config.py  example_usage.py  pyproject.toml
.cursor/rules/: style.mdc
mynab/: app.py  utils.py
mynab/pages/: README.md  accounts.py  budget_data.py  categories.py  overview.py  transactions.py
tests/: __init__.py  test_app.py
